crates/ty_python_types/resources/mdtest/snapshots/assert_type.md_-_`assert_type`_-_Basic_(c507788da2659ec9).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: assert_type.md - `assert_type` - Basic
mdtest path: crates/ty_python_types/resources/mdtest/directives/assert_type.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import assert_type
2 | 
3 | def _(x: int, y: bool):
4 |     assert_type(x, int)  # fine
5 |     assert_type(x, str)  # error: [type-assertion-failure]
6 |     assert_type(assert_type(x, int), int)
7 |     assert_type(y, int)  # error: [type-assertion-failure]
```

# Diagnostics

```
error[type-assertion-failure]: Argument does not have asserted type `str`
 --> src/mdtest_snippet.py:5:5
  |
3 | def _(x: int, y: bool):
4 |     assert_type(x, int)  # fine
5 |     assert_type(x, str)  # error: [type-assertion-failure]
  |     ^^^^^^^^^^^^-^^^^^^
  |                 |
  |                 Inferred type is `int`
6 |     assert_type(assert_type(x, int), int)
7 |     assert_type(y, int)  # error: [type-assertion-failure]
  |
info: `str` and `int` are not equivalent types
info: rule `type-assertion-failure` is enabled by default

```

```
error[type-assertion-failure]: Argument does not have asserted type `int`
 --> src/mdtest_snippet.py:7:5
  |
5 |     assert_type(x, str)  # error: [type-assertion-failure]
6 |     assert_type(assert_type(x, int), int)
7 |     assert_type(y, int)  # error: [type-assertion-failure]
  |     ^^^^^^^^^^^^-^^^^^^
  |                 |
  |                 Inferred type is `bool`
  |
info: `bool` is a subtype of `int`, but they are not equivalent
info: rule `type-assertion-failure` is enabled by default

```
